pwk/lab1.1-k8s_app_deployment/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskdemo-app
  labels:
    app: flaskdemo
spec:
  selector:
    matchLabels:
      app: flaskdeamoapp
  replicas: 2
  template:
    metadata:
      labels:
        app: flaskdemoapp
    spec:
      containers:
        - name: flaskdemo
          image: <VOTRE IMAGE>
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "2500m"
