pwk/lab1.1-k8s_app_deployment/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskdemoservice
spec:
  ports:
    - port: 80
  selector:
    app: flaskdemo
  clusterIP: None
