pwk/lab1.1-k8s_app_deployment/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaskdemo-ingress
spec:
  defaultBackend:
    service:
      name: flaskdemosvc
      port:
        number: 80
